<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="50dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:paddingLeft="16dp"
            android:textSize="32sp"/>
        <EditText
            android:id="@+id/age1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="numberSigned"/>
        <EditText
            android:id="@+id/gender1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender" />
        <EditText
            android:id="@+id/phone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"/>
        <DatePicker
            android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/info_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="updateInfo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePass"
            android:onClick="changePass"/>
    </LinearLayout>
</ScrollView>